--- a/info.yaml
+++ b/info.yaml
@@ -23,7 +23,7 @@ yaml_version: 4
 documentation: 
   author:       "uriel jaramillo"      # Your name
   title:        "clock divider"      # Project title
-  language:     "Wokwi" # other examples include Verilog, Amaranth, VHDL, etc
+  language:     "Verilog" # other examples include Verilog, Amaranth, VHDL, etc
   description:  "divide the clock "      # Short description of what your project does
 
 # Longer description of how the project works. You can use standard markdown format.
