--- a/info.yaml
+++ b/info.yaml
@@ -32,7 +32,7 @@ documentation:
   author:       "Raúl Alberto Pacheco Rodríguez"      # Your name
   title:        "Softmax"      # Project title
   language:     "Verilog" # other examples include Verilog, Amaranth, VHDL, etc
-  description:  "this is a module softmax for machine learning"      # Short description of what your project does
+  description:  "this is a module softmax for models of machine learning"      # Short description of what your project does
 
 # Longer description of how the project works. You can use standard markdown format.
   how_it_works: |
